isfdb/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: isfdb-adapter
  namespace: isfdb
spec:
  ingressClassName: traefik
  rules:
    - host: isfdb-adapter.k8s.ecafe.org
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: isfdb-adapter
                port:
                  number: 8080
